Criado através do Colaboratory

--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZSqehSAeOtcf5R0TV4jbD",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPB8ypq1/PbVuTmGPTVujvd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,11 +39,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Criado:** 1982 </br>\n",
-        "**por:** Guido Van Hossum </br>\n",
-        "**História:** em 1989 quando estava a tentar adaptar um programa em linguagem C, então criou uma linguagem para resolver o problema. Dai surgiu a proposta da criação da linguagem Python. </br>\n",
-        "**Objectivo:** criar uma linguagem de programação que fosse interpretado, mas que tivesse comandos simples, fáceis de entender, porque segundo o criador a linguagem em C eram comandos grandes, complicados de entender, apenas os programadores experientes eram capazes de entender certos programas em C. O objectivo era criar comandos simples de fácil de compreender. </br>\n",
-        "**Nome:** inspirado em *Monty Python's Flying* "
+        "##### **Criado:** 1982 \n",
+        "##### **por:** Guido Van Hossum\n",
+        "##### **História:** em 1989 quando estava a tentar adaptar um programa em linguagem C, então criou uma linguagem para resolver o problema. Dai surgiu a proposta da criação da linguagem Python.\n",
+        "##### **Objectivo:** criar uma linguagem de programação que fosse interpretado, mas que tivesse comandos simples, fáceis de entender, porque segundo o criador a linguagem em C eram comandos grandes, complicados de entender, apenas os programadores experientes eram capazes de entender certos programas em C. O objectivo era criar comandos simples de fácil de compreender.\n",
+        "##### **Nome:** inspirado em *Monty Python's Flying* \n",
+        "##### Teste\n",
+        "##### Teste"
       ],
       "metadata": {
         "id": "hV-0un8wQvLO"
