Criado através do Colaboratory

--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -4,8 +4,13 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [
+        "QWrQZdK5QO1C",
+        "3gWOZvo6BRJ_",
+        "ztpDq6Vmd2IQ"
+      ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPB8ypq1/PbVuTmGPTVujvd",
+      "authorship_tag": "ABX9TyPmmI6s8a+2mmE35MJyrsd0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,9 +48,7 @@
         "##### **por:** Guido Van Hossum\n",
         "##### **História:** em 1989 quando estava a tentar adaptar um programa em linguagem C, então criou uma linguagem para resolver o problema. Dai surgiu a proposta da criação da linguagem Python.\n",
         "##### **Objectivo:** criar uma linguagem de programação que fosse interpretado, mas que tivesse comandos simples, fáceis de entender, porque segundo o criador a linguagem em C eram comandos grandes, complicados de entender, apenas os programadores experientes eram capazes de entender certos programas em C. O objectivo era criar comandos simples de fácil de compreender.\n",
-        "##### **Nome:** inspirado em *Monty Python's Flying* \n",
-        "##### Teste\n",
-        "##### Teste"
+        "##### **Nome:** inspirado em *Monty Python's Flying*"
       ],
       "metadata": {
         "id": "hV-0un8wQvLO"
@@ -54,7 +57,163 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Aula 05"
+        "**Python é:**\n",
+        "* Linguagem de propósito geral - dá pra usar a linguagem no geral\n",
+        "* Fácil e intuitivo - comandos simples\n",
+        "* Multiplataforma - dá pra usar em vários sistemas\n",
+        "* Batterias included\n",
+        "* Livre - código aberto\n",
+        "* Organizada\n",
+        "* Orientada a objectos - tudo dentro do python é um objecto\n",
+        "* Muitas bibliotecas"
+      ],
+      "metadata": {
+        "id": "bsisDmrV-YoG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **Filosofia do Python - Zen of Python [Tim Peterts - 1999]**"
+      ],
+      "metadata": {
+        "id": "3gWOZvo6BRJ_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import this"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Os-bgmp3BPdh",
+        "outputId": "24e21fdd-332d-49ff-8c88-ef101641e419"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The Zen of Python, by Tim Peters\n",
+            "\n",
+            "Beautiful is better than ugly.\n",
+            "Explicit is better than implicit.\n",
+            "Simple is better than complex.\n",
+            "Complex is better than complicated.\n",
+            "Flat is better than nested.\n",
+            "Sparse is better than dense.\n",
+            "Readability counts.\n",
+            "Special cases aren't special enough to break the rules.\n",
+            "Although practicality beats purity.\n",
+            "Errors should never pass silently.\n",
+            "Unless explicitly silenced.\n",
+            "In the face of ambiguity, refuse the temptation to guess.\n",
+            "There should be one-- and preferably only one --obvious way to do it.\n",
+            "Although that way may not be obvious at first unless you're Dutch.\n",
+            "Now is better than never.\n",
+            "Although never is often better than *right* now.\n",
+            "If the implementation is hard to explain, it's a bad idea.\n",
+            "If the implementation is easy to explain, it may be a good idea.\n",
+            "Namespaces are one honking great idea -- let's do more of those!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Aula #04 - Primeiros comandos"
+      ],
+      "metadata": {
+        "id": "26k4O5pZDhNB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Olá, Mundo!')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UNAaFJlZDrJJ",
+        "outputId": "9453afa9-5180-4ee8-aeda-62b95330ef9f"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Olá, Mundo!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Números:**"
+      ],
+      "metadata": {
+        "id": "JmY5fFwzEloh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(7+4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sn9CcAgYEvWw",
+        "outputId": "c7acd749-628d-4683-bb8b-39d72399baa0"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "11\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('7'+'4')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-VTdDZKBE4kq",
+        "outputId": "6a746a8d-9456-41c2-b077-74272d4b5644"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "74\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Aula #05"
       ],
       "metadata": {
         "id": "ztpDq6Vmd2IQ"
