Criado através do Colaboratory

--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -5,12 +5,10 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "QWrQZdK5QO1C",
-        "3gWOZvo6BRJ_",
         "ztpDq6Vmd2IQ"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPmmI6s8a+2mmE35MJyrsd0",
+      "authorship_tag": "ABX9TyN/lT/VZrQKVUaqJpzHUzsd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,6 +42,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#### **Informações Gerais**\n",
         "##### **Criado:** 1982 \n",
         "##### **por:** Guido Van Hossum\n",
         "##### **História:** em 1989 quando estava a tentar adaptar um programa em linguagem C, então criou uma linguagem para resolver o problema. Dai surgiu a proposta da criação da linguagem Python.\n",
@@ -74,7 +73,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### **Filosofia do Python - Zen of Python [Tim Peterts - 1999]**"
+        "#### **Filosofia do Python - Zen of Python [Tim Peterts - 1999]**"
       ],
       "metadata": {
         "id": "3gWOZvo6BRJ_"
@@ -92,7 +91,7 @@
         "id": "Os-bgmp3BPdh",
         "outputId": "24e21fdd-332d-49ff-8c88-ef101641e419"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,6 +132,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##### **Texto**"
+      ],
+      "metadata": {
+        "id": "XTQsbWtWCHpP"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print('Olá, Mundo!')"
@@ -144,7 +152,7 @@
         "id": "UNAaFJlZDrJJ",
         "outputId": "9453afa9-5180-4ee8-aeda-62b95330ef9f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +166,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Números:**"
+        "#### **Números**"
       ],
       "metadata": {
         "id": "JmY5fFwzEloh"
@@ -176,7 +184,7 @@
         "id": "sn9CcAgYEvWw",
         "outputId": "c7acd749-628d-4683-bb8b-39d72399baa0"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,13 +207,62 @@
         "id": "-VTdDZKBE4kq",
         "outputId": "6a746a8d-9456-41c2-b077-74272d4b5644"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "74\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Print** - Interatividade"
+      ],
+      "metadata": {
+        "id": "Qc1lvkVdCZgP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Definições**\n",
+        "##### **Print:** significa *escreva*\n",
+        "##### **Input:** significa *leia*"
+      ],
+      "metadata": {
+        "id": "GEX9L6aiDLZT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nome = input('Qual é o seu nome?')\n",
+        "idade = input('Quantos anos você tem?')\n",
+        "peso = input('Quanto você pensa?')\n",
+        "print(nome,idade,peso)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-5xkW3hDCff4",
+        "outputId": "4e4ad481-0dc9-4fd7-9d4d-bd3ddaa32819"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Qual é o seu nome?Maria\n",
+            "Quantos anos você tem?89\n",
+            "Quanto você pensa?56\n",
+            "Maria 89 56\n"
           ]
         }
       ]
