Criado através do Colaboratory

--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -8,7 +8,7 @@
         "ztpDq6Vmd2IQ"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN/lT/VZrQKVUaqJpzHUzsd",
+      "authorship_tag": "ABX9TyP/1Xs7HbXyi+t6w/Z6zy+i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -253,7 +253,7 @@
         "id": "-5xkW3hDCff4",
         "outputId": "4e4ad481-0dc9-4fd7-9d4d-bd3ddaa32819"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,6 +298,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Aula #06"
+      ],
+      "metadata": {
+        "id": "qR9nV1kt8Dgx"
+      }
     }
   ]
 }
