Criado através do Colaboratory

--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -5,10 +5,14 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "ztpDq6Vmd2IQ"
+        "QWrQZdK5QO1C",
+        "hV-0un8wQvLO",
+        "3gWOZvo6BRJ_",
+        "JmY5fFwzEloh",
+        "AKWNcPbz9Ido"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP/1Xs7HbXyi+t6w/Z6zy+i",
+      "authorship_tag": "ABX9TyMkx4iouVND1qe0r5t2hxz9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -307,6 +311,38 @@
       "metadata": {
         "id": "qR9nV1kt8Dgx"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **input**\n",
+        "###### - tudo o  que for digitado, tem que ser enviado para algum lugar, então criámos uma variável *(ex: 'n1' ou 'n2')* para guardar o resultado desse input, o que o utilizador irá digitar."
+      ],
+      "metadata": {
+        "id": "AKWNcPbz9Ido"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n1=input('Digite um número:'t)"
+      ],
+      "metadata": {
+        "id": "HPYncvOC8zlc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n2=input('Digite mais um número:')"
+      ],
+      "metadata": {
+        "id": "zKKjx8PS9_66"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
