Criado através do Colaboratory

--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -8,11 +8,10 @@
         "QWrQZdK5QO1C",
         "hV-0un8wQvLO",
         "3gWOZvo6BRJ_",
-        "JmY5fFwzEloh",
-        "AKWNcPbz9Ido"
+        "JmY5fFwzEloh"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMkx4iouVND1qe0r5t2hxz9",
+      "authorship_tag": "ABX9TyPB2yQv31Rf3BSzTPawxNYs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -325,7 +324,12 @@
     {
       "cell_type": "code",
       "source": [
-        "n1=input('Digite um número:'t)"
+        "n1=input('Digite um número:') # Variável\n",
+        "n2=input('Digite mais número:') # Variável\n",
+        "s=n1+n2 # Variável; uma operação de soma\n",
+        "print('A soma vale',s) # String - 'A soma vale'; s - o valor de s\n",
+        "# input - para ler o teclado\n",
+        "# print - para escrever na tela"
       ],
       "metadata": {
         "id": "HPYncvOC8zlc"
@@ -334,15 +338,56 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "n2=input('Digite mais um número:')"
+        "#### **Tipos Primitivos**\n",
+        "\n",
+        "*   int - números inteiros (7; -4; 0; 9875)\n",
+        "*   float - número reais ou números de ponto flutuante (4.5; 0.076; -15.223; 7.0)\n",
+        "*   bool - valores lógicos ou boleanos (True; False)\n",
+        "*   str - valores, caracteres ou strings ('Olá'; '7.5';  ' ' - string vazia)\n",
+        "\n"
       ],
       "metadata": {
-        "id": "zKKjx8PS9_66"
+        "id": "awxQrWiPbw6h"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Forma diferente do print**\n"
+      ],
+      "metadata": {
+        "id": "mNO1atoRhmFR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('A soma vale {}'.format(s))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 165
+        },
+        "id": "OHc9MOOJhtxD",
+        "outputId": "18005628-48d1-4622-afc8-78d2360c7539"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-b9101c4ec596>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'A soma vale {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 's' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
