Criado através do Colaboratory

--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -8,10 +8,12 @@
         "QWrQZdK5QO1C",
         "hV-0un8wQvLO",
         "3gWOZvo6BRJ_",
-        "JmY5fFwzEloh"
+        "26k4O5pZDhNB",
+        "JmY5fFwzEloh",
+        "ztpDq6Vmd2IQ"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPB2yQv31Rf3BSzTPawxNYs",
+      "authorship_tag": "ABX9TyNdV3DKRWOmpCb85ZfuiyLF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -353,6 +355,84 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Mostrar o tipo primitivo do valor\n",
+        "n1=input('Digite um valor:')\n",
+        "print(type(n1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dy4R0HCxl6FM",
+        "outputId": "360079d9-bd8b-47bf-b137-1c90e044c1aa"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um valor:5\n",
+            "<class 'str'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Converter a string para número inteiro\n",
+        "n1=int(input('Digite um valor: '))\n",
+        "print(type(n1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xWyeiDdGmhc0",
+        "outputId": "31d1df03-7118-452b-9c05-7634bd6d1ac4"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um valor: 5\n",
+            "<class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Se é numérico\n",
+        "n=input('Digite algo: ')\n",
+        "print(n.isnumeric())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jxCL08BNwjrO",
+        "outputId": "bd6d6a6b-f6ce-4700-fadd-bc4c999eb931"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite algo: 2\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "#### **Forma diferente do print**\n"
@@ -362,29 +442,73 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "```\n",
+        "print('A soma vale {}'.format(s))\n",
+        "```\n",
+        "É uma sintaxe nova aplicada a partir do Python 3. \n",
+        "{} - é uma máscara que vai ser subtituida por um método da própria string. *É uma espécie de marcador de lugar que indica onde um valor deve ser inserido na string.*\n",
+        ".format - é mais flexível, permitindo que personalize a forma como a string é formatada\n"
+      ],
+      "metadata": {
+        "id": "hvdK2CUOig71"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "print('A soma vale {}'.format(s))"
+        "# Com as string convertidas para números, vai ser possivel fazer a soma. Sem o 'int' irá apenas juntar os números, porque são strings.\n",
+        "n1=int(input('Digite um valor: '))\n",
+        "n2=int(input('Digite um valor: '))\n",
+        "s=n1+n2\n",
+        "print('A soma vale',s)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 165
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "OHc9MOOJhtxD",
-        "outputId": "18005628-48d1-4622-afc8-78d2360c7539"
+        "id": "HH9tKn1xm6TX",
+        "outputId": "93f1c8b1-5ff1-48a4-f474-96edf86aec8f"
       },
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-b9101c4ec596>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'A soma vale {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 's' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um valor: 5\n",
+            "Digite um valor: 5\n",
+            "A soma vale 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n1=int(input('Digite um valor: '))\n",
+        "n2=int(input('Digite outro: '))\n",
+        "s=n1+n2\n",
+        "# print('A soma entre ', n1, 'e', n2, 'vale', s)\n",
+        "print('A soma entre {} e {} vale {}'.format(n1, n2, s))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BmcYoFVfuh2-",
+        "outputId": "afa5d7a3-a868-4169-9a58-aebdb9a8962f"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um valor: 5\n",
+            "Digite outro: 5\n",
+            "A soma entre  5 e 5 vale 10\n"
           ]
         }
       ]
