Criado através do Colaboratory

--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -4,16 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "QWrQZdK5QO1C",
-        "hV-0un8wQvLO",
-        "3gWOZvo6BRJ_",
-        "26k4O5pZDhNB",
-        "JmY5fFwzEloh",
-        "ztpDq6Vmd2IQ"
-      ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNdV3DKRWOmpCb85ZfuiyLF",
+      "authorship_tag": "ABX9TyOrPz3gJ9K2+ypIzVJAXYRC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,9 +86,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Os-bgmp3BPdh",
-        "outputId": "24e21fdd-332d-49ff-8c88-ef101641e419"
+        "outputId": "4a53da6f-fb62-47de-c36b-c7fd79f6d314"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,9 +147,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UNAaFJlZDrJJ",
-        "outputId": "9453afa9-5180-4ee8-aeda-62b95330ef9f"
+        "outputId": "861e016b-3f2e-4b2a-ebb6-a18ac26e8d7a"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,25 +244,10 @@
         "print(nome,idade,peso)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-5xkW3hDCff4",
-        "outputId": "4e4ad481-0dc9-4fd7-9d4d-bd3ddaa32819"
+        "id": "-5xkW3hDCff4"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Qual é o seu nome?Maria\n",
-            "Quantos anos você tem?89\n",
-            "Quanto você pensa?56\n",
-            "Maria 89 56\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -362,23 +339,10 @@
         "print(type(n1))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dy4R0HCxl6FM",
-        "outputId": "360079d9-bd8b-47bf-b137-1c90e044c1aa"
+        "id": "dy4R0HCxl6FM"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Digite um valor:5\n",
-            "<class 'str'>\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -388,23 +352,10 @@
         "print(type(n1))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xWyeiDdGmhc0",
-        "outputId": "31d1df03-7118-452b-9c05-7634bd6d1ac4"
+        "id": "xWyeiDdGmhc0"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Digite um valor: 5\n",
-            "<class 'int'>\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -414,23 +365,23 @@
         "print(n.isnumeric())"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jxCL08BNwjrO",
-        "outputId": "bd6d6a6b-f6ce-4700-fadd-bc4c999eb931"
+        "id": "jxCL08BNwjrO"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Digite algo: 2\n",
-            "True\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Se é letra\n",
+        "n=input('Digite algo: ')\n",
+        "print(n.isalpha())"
+      ],
+      "metadata": {
+        "id": "i4CV_y7axur1"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -465,24 +416,10 @@
         "print('A soma vale',s)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HH9tKn1xm6TX",
-        "outputId": "93f1c8b1-5ff1-48a4-f474-96edf86aec8f"
+        "id": "HH9tKn1xm6TX"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Digite um valor: 5\n",
-            "Digite um valor: 5\n",
-            "A soma vale 10\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -494,24 +431,10 @@
         "print('A soma entre {} e {} vale {}'.format(n1, n2, s))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BmcYoFVfuh2-",
-        "outputId": "afa5d7a3-a868-4169-9a58-aebdb9a8962f"
+        "id": "BmcYoFVfuh2-"
       },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Digite um valor: 5\n",
-            "Digite outro: 5\n",
-            "A soma entre  5 e 5 vale 10\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
