Criado através do Colaboratory

--- a/aulas_python.ipynb
+++ b/aulas_python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOrPz3gJ9K2+ypIzVJAXYRC",
+      "authorship_tag": "ABX9TyO9HebP1d4k5lVn8nNZb2Bm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -379,6 +379,58 @@
       ],
       "metadata": {
         "id": "i4CV_y7axur1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Se é alfanumérico\n",
+        "n=input('Digite algo: ')\n",
+        "print(n.isalnum())"
+      ],
+      "metadata": {
+        "id": "hn0JSHmt0vBk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Se tem somente letras maiúsculas\n",
+        "n=input('Digite algo: ')\n",
+        "print(n.isupper())"
+      ],
+      "metadata": {
+        "id": "6zxLNhxG1CN-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Se tem somente letras minusculas\n",
+        "n=input('Digite algo: ')\n",
+        "print(n.islower())"
+      ],
+      "metadata": {
+        "id": "250_i1uv1UO-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Se pode ser impresso\n",
+        "n=input('Digite algo: ')\n",
+        "print(n.isprintable())"
+      ],
+      "metadata": {
+        "id": "D7S_EcS31eY-"
       },
       "execution_count": null,
       "outputs": []
